--- a/style.css
+++ b/style.css
@@ -1,18 +1,24 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: rgb(0, 128, 128)
+    background: linear-gradient(to bottom, rgb(0, 128, 128), #6DD5FA);
 }
 
 .container {
-    max-width: 400px;
+    max-width: 550px;
     margin: 0 auto;
-    padding: 120px;
+    padding: 30px;
     color: aliceblue;
     
 }
-h1
+
 .first{
     text-align: center;
+    margin-right: 40px;
+    font-size: x-large;
+}
+h1#first:hover {
+    color: #FFA500;
+    cursor: pointer;
 }
 
 .form-group {
@@ -31,8 +37,8 @@ input[type="number"] {
     width: 100%;
     padding: 15px;
     font-size: 20px;
-    border-radius: 20px;
-    border-color: rgb(0, 0, 0);
+    border-radius: 35px;
+    border-color: rgb(4, 250, 201);
 }
 
 .btn {
@@ -55,6 +61,10 @@ input[type="number"] {
 
 .result {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 5px;
+    font-weight: 900;
     font-size: 24px;
+    padding: 20px;
+    color: rgb(24, 0, 236);
+    margin-left: -5rem;
 }
