--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background: linear-gradient(to bottom, rgb(0, 128, 128), #6DD5FA);
+    background: linear-gradient(rgb(0, 128, 128), #6DD5FA);
 }
 
 .container {
